--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EternalSMP - Season 14</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <!-- Header -->
   <header class="header">
-    <div class="logo fantasy-font">EternalSMP</div>
+    <div class="logo">EternalSMP</div>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-  </header>  <!-- Sidebar Menu -->  <nav id="sidebar" class="sidebar">
+  </header>
+
+  <!-- Sidebar Menu -->
+  <nav id="sidebar" class="sidebar">
     <ul>
       <li><a href="page2.html">Pendaftaran OC</a></li>
       <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd33CH_UBNKC4FrHwIFKMhzR160hNZ0MQ-in7kJdtmK6UQLmQ/viewform" target="_blank">Pendaftaran Server</a></li>
@@ -19,27 +24,104 @@
       <li><a href="#">Dashboard</a></li>
       <li><a href="#">Shop</a></li>
     </ul>
-  </nav>  <!-- Hero Section -->  <main class="hero fantasy-bg">
-    <img src="https://github.com/marcellnw/eternalsmpoc/blob/main/20250625_141013.png?raw=true" alt="Logo EternalSMP" class="eternal-logo" />
-    <h1 class="title-font">🌍 Eternal SMP Season 14</h1>
-    <p class="subtitle">Petualangan besar telah dimulai. Pilih ras unikmu dan bentuk takdirmu di dunia Astravell.</p><!-- Slider -->
-<div class="slider-wrapper">
-  <button class="slider-btn prev" onclick="prevSlide()">❮</button>
-  <div class="slider-view">
-    <img id="characterImage" class="slide-image" src="https://github.com/marcellnw/eternalsmpoc/blob/main/euria.png?raw=true" alt="Euria" />
-  </div>
-  <button class="slider-btn next" onclick="nextSlide()">❯</button>
-</div>
+  </nav>
 
-<!-- Info Character -->
-<div class="character-info-box">
-  <h2 id="characterName">Euria 🧽</h2>
-  <p id="characterRace"><strong>Ras:</strong> Manusia Murni</p>
-  <p id="characterDesc">Ras yang memiliki keseimbangan alami dalam kekuatan, kecerdasan, dan kelincahan. Cocok untuk pemain yang menginginkan fleksibilitas tinggi dan bisa beradaptasi dengan berbagai peran.</p>
-  <p id="characterRole"><em>Cocok untuk: Semua class – petarung, penyihir, pemburu</em></p>
-</div>
+  <!-- Hero Section -->
+  <main class="hero">
+    <img src="https://github.com/marcellnw/eternalsmpoc/blob/main/20250625_141013.png?raw=true" alt="Logo EternalSMP" class="eternal-logo">
+    <h1>🌍 Eternal SMP Season 14</h1>
+    <p>Petualangan baru telah dimulai. Pilih ras karaktermu dan bentuk kisahmu sendiri!</p>
+    <!-- Character Slider -->
+    <div class="slider-container">
+      <button class="prev" onclick="prevSlide()">❮</button>
+      <div class="slides">
+        <img class="slide active" src="https://github.com/marcellnw/eternalsmpoc/blob/main/euria.png?raw=true" alt="Euria" data-index="0"/>
+        <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/graveth.png?raw=true" alt="Graveth" data-index="1"/>
+        <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/meredien.png?raw=true" alt="Maredien" data-index="2"/>
+        <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/heretic.png?raw=true" alt="Heretic" data-index="3"/>
+        <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/diablonic.png?raw=true" alt="Diablonic" data-index="4"/>
+        <img class="slide" src="https://github.com/marcellnw/eternalsmpoc/blob/main/laurian.png?raw=true" alt="Laurian" data-index="5"/>
+      </div>
+      <button class="next" onclick="nextSlide()">❯</button>
+    </div>
 
-  </main>  <!-- Footer -->  <footer class="footer">
+    <!-- Character Descriptions (Auto Follow Slide) -->
+    <section class="character-info">
+      <div id="character-description">
+        <h2>Euria 🧍‍♂️</h2>
+        <p><strong>Ras:</strong> Manusia Murni</p>
+        <p>Ras yang memiliki keseimbangan alami dalam kekuatan, kecerdasan, dan kelincahan. Cocok untuk pemain yang menginginkan fleksibilitas tinggi dan bisa beradaptasi dengan berbagai peran.</p>
+        <p><em>Cocok untuk: Semua class – petarung, penyihir, pemburu</em></p>
+      </div>
+    </section>
+    <!-- Slot Karakter OC -->
+    <section class="character-slots">
+      <h2>📦 Slot Karakter OC</h2>
+      <div class="slot-grid">
+        <div class="slot-card">
+          <h3>Slot #1</h3>
+          <p>Terbuka untuk semua pemain yang mendaftar dengan lengkap.</p>
+        </div>
+        <div class="slot-card">
+          <h3>Slot #2</h3>
+          <p>Khusus untuk karakter dengan lore yang kuat & original.</p>
+        </div>
+        <div class="slot-card">
+          <h3>Slot #3</h3>
+          <p>Slot langka hanya dibuka saat event tertentu.</p>
+        </div>
+        <div class="slot-card">
+          <h3>Slot #4</h3>
+          <p>Dibuka melalui undangan admin EternalSMP.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Cerita & Sinopsis -->
+    <section class="story-section" id="cerita">
+      <h2>📖 Cerita Season 14</h2>
+      <p>
+        Astravell kembali diselimuti konflik antara ras-ras kuno yang telah lama tidur.
+        Sebuah cahaya dari rembulan mengusik keseimbangan dunia, membangkitkan kekuatan yang terlupakan.
+        Di tengah bayang-bayang kerajaan yang runtuh, para petarung dan penyihir muda mulai menulis legenda mereka sendiri.
+      </p>
+    </section>
+    <!-- Slot Karakter OC -->
+    <section class="character-slots">
+      <h2>📦 Slot Karakter OC</h2>
+      <div class="slot-grid">
+        <div class="slot-card">
+          <h3>Slot #1</h3>
+          <p>Terbuka untuk semua pemain yang mendaftar dengan lengkap.</p>
+        </div>
+        <div class="slot-card">
+          <h3>Slot #2</h3>
+          <p>Khusus untuk karakter dengan lore yang kuat & original.</p>
+        </div>
+        <div class="slot-card">
+          <h3>Slot #3</h3>
+          <p>Slot langka hanya dibuka saat event tertentu.</p>
+        </div>
+        <div class="slot-card">
+          <h3>Slot #4</h3>
+          <p>Dibuka melalui undangan admin EternalSMP.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Cerita & Sinopsis -->
+    <section class="story-section" id="cerita">
+      <h2>📖 Cerita Season 14</h2>
+      <p>
+        Astravell kembali diselimuti konflik antara ras-ras kuno yang telah lama tidur.
+        Sebuah cahaya dari rembulan mengusik keseimbangan dunia, membangkitkan kekuatan yang terlupakan.
+        Di tengah bayang-bayang kerajaan yang runtuh, para petarung dan penyihir muda mulai menulis legenda mereka sendiri.
+      </p>
+    </section>
+    </main>
+
+  <!-- Footer -->
+  <footer class="footer">
     <div class="footer-top">
       <div class="footer-column">
         <h4>Server</h4>
@@ -68,5 +150,9 @@
     <div class="footer-bottom">
       <p>© 2025 EternalSMP Server. All rights reserved.</p>
     </div>
-  </footer>  <script src="script.js"></script></body>
+  </footer>
+
+  <!-- Script -->
+  <script src="script.js"></script>
+</body>
 </html>
