--- a/index.html
+++ b/index.html
@@ -75,50 +75,17 @@
           <p>Dibuka melalui undangan admin EternalSMP.</p>
         </div>
       </div>
-    </section>
+</section>
 
-    <!-- Cerita & Sinopsis -->
-    <section class="story-section" id="cerita">
-      <h2>📖 Cerita Season 14</h2>
+    <!-- Lore / Cerita -->
+    <section class="story-section">
+      <h2 class="fantasy-title">✨ Awal Mula Season 14</h2>
       <p>
-        Astravell kembali diselimuti konflik antara ras-ras kuno yang telah lama tidur.
-        Sebuah cahaya dari rembulan mengusik keseimbangan dunia, membangkitkan kekuatan yang terlupakan.
-        Di tengah bayang-bayang kerajaan yang runtuh, para petarung dan penyihir muda mulai menulis legenda mereka sendiri.
+        Di tengah keruntuhan dominasi lama, dunia EternalSMP kembali membangkitkan harapan melalui para ras unik yang terbangun dari tidur panjang. Setiap karakter membawa beban sejarah, tujuan tersembunyi, dan keinginan untuk membentuk takdir baru.
+        Perang lama belum usai, dan setiap keputusan akan membentuk arah dunia. Bergabunglah dalam petualangan ini dan ukir ceritamu.
       </p>
     </section>
-    <!-- Slot Karakter OC -->
-    <section class="character-slots">
-      <h2>📦 Slot Karakter OC</h2>
-      <div class="slot-grid">
-        <div class="slot-card">
-          <h3>Slot #1</h3>
-          <p>Terbuka untuk semua pemain yang mendaftar dengan lengkap.</p>
-        </div>
-        <div class="slot-card">
-          <h3>Slot #2</h3>
-          <p>Khusus untuk karakter dengan lore yang kuat & original.</p>
-        </div>
-        <div class="slot-card">
-          <h3>Slot #3</h3>
-          <p>Slot langka hanya dibuka saat event tertentu.</p>
-        </div>
-        <div class="slot-card">
-          <h3>Slot #4</h3>
-          <p>Dibuka melalui undangan admin EternalSMP.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Cerita & Sinopsis -->
-    <section class="story-section" id="cerita">
-      <h2>📖 Cerita Season 14</h2>
-      <p>
-        Astravell kembali diselimuti konflik antara ras-ras kuno yang telah lama tidur.
-        Sebuah cahaya dari rembulan mengusik keseimbangan dunia, membangkitkan kekuatan yang terlupakan.
-        Di tengah bayang-bayang kerajaan yang runtuh, para petarung dan penyihir muda mulai menulis legenda mereka sendiri.
-      </p>
-    </section>
-    </main>
+  </main>
 
   <!-- Footer -->
   <footer class="footer">
